# kejebe-python

./: .env.example  .gitignore  main.py  manage.py  pyproject.toml  wsgi.py
apps/accounts/: apps.py  models.py  serializers.py  tests.py  views.py
apps/banners/: admin.py  apps.py  models.py  serializers.py  views.py
apps/categories/: admin.py  models.py  serializers.py  tests.py  views.py
apps/devices/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
apps/home/: admin.py  models.py  serializers.py  views.py
apps/regions/: admin.py  models.py  serializers.py  views.py
apps/services/: admin.py  apps.py  filters.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  tests_my_endpoints.py  throttles.py  validators.py  vendor_serializers.py  vendor_views.py  views.py
apps/stories/: admin.py  filters.py  models.py  serializers.py  views.py
apps/system/: admin.py  forms.py  models.py  serializers.py  tests.py  throttles.py  views.py
apps/users/: admin.py  blocking.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
core/: fields.py  image_assets.py  image_cropping_backend.py  middleware.py  mixins.py  serializers.py  storage.py  utils.py  video.py
kejebe/: asgi.py  celery.py  settings.py  settings_test_sqlite.py  urls.py  wsgi.py
scripts/: deploy.sh  setup.sh  setup_nginx.sh
templates/: delete_account.html  privacy_policy.html  service_deep_link.html  service_deep_link_not_found.html  support.html  terms_of_use.html
templates/admin/: base_site.html
(+79 files in other folders)
